// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButtonGroup /> matches snapshot 1`] = `
<div>
  <div
    class="radio-group"
    id="radio-group-1"
  >
    <button
      aria-selected="false"
      class=" css-kcclw-radioButton-radioButton"
      id="radio-0"
    >
      Test label
    </button>
  </div>
</div>
`;

exports[`<RadioButtonGroup /> matches snapshot with selected value 1`] = `
<div>
  <div
    id="testRadioButtonGroup"
  >
    <button
      aria-selected="true"
      class="is-selected css-kcclw-radioButton-radioButton"
      id="radio-0"
    >
      Test label
    </button>
  </div>
</div>
`;
